--- a/client/stylesheets/style.less
+++ b/client/stylesheets/style.less
@@ -272,6 +272,8 @@ body {
     background: #bada55;
     border-radius: 20px 20px 0 20px;
     padding: 10px 20px;
+    -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.2), 0 1px 0 rgba(255, 255, 255, 0.5);
+    -moz-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.2), 0 1px 0 rgba(255, 255, 255, 0.5);
     box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.2), 0 1px 0 rgba(255, 255, 255, 0.5);
 
     img {
@@ -288,6 +290,8 @@ body {
     line-height: 15px;
     color: rgba(0, 0, 0, 0.5);
     text-shadow: 0 1px 0 rgba(255, 253, 253, 0.7);
+    display: inline-block;
+    margin-left: 10px;
 }
 
 small {
@@ -441,6 +445,15 @@ form {
         padding: 0;
     }
 
+    small {
+        margin-left: 0;
+        margin-right: 10px;
+    }
+
+    .delete {
+        margin-left: 0;
+    }
+
     .login-display-name {
         display: none;
     }
@@ -487,6 +500,7 @@ form {
 
     .msg {
         display: block;
+        margin-bottom: 10px;
     }
 
     .author-message {
@@ -499,6 +513,14 @@ form {
         p {
             width: 100%;
         }
+    }
+
+    input[type='text'] {
+        width: 50% !important;
+    }
+
+    .author-message {
+        box-shadow: none;
     }
 }
 
